--- a/css/style.css
+++ b/css/style.css
@@ -641,9 +641,10 @@ label.error{
   display: inline-block;
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
-  font-size:4vmin;
+  font-size: 3em;
   line-height: 1;
   color: #fff;
+  margin: 0;
 }
 
 .brand:hover,
@@ -663,6 +664,12 @@ label.error{
   line-height: 1;
   opacity: 0.04;
   color: #fff;
+}
+
+.brand-img{
+  width: 100px;
+  display: inline-block;
+  margin: 0%;
 }
 
 .slide-number{
